--- a/public/index.html
+++ b/public/index.html
@@ -543,7 +543,7 @@
                               <h4 class="mb-0 fw-medium text-white">Mark Shankle</h4>
                               <p class="fw-normal mb-0 text-primary">On Your Mark Trucking LLC - Owner</p>
                               <p class="card-text text-200 mt-3">“Absolutely Amazing Service!!!!! I'd give them 10 stars
-                                if I could. I've been dealing with OO Forms for about a year now. Takes away the stress
+                                if I could. I've been dealing with ooForms for about a year now. Takes away the stress
                                 and headache of having to fill out carrier packets when im on the road. Great for
                                 Owner-Operators, or any company/individual that deals with multiple carrier setups on a
                                 weekly basis.”</p>
@@ -554,6 +554,59 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="carousel-item">
+                  <div class="row h-100">
+                    <div class="col-12">
+                      <div class="card testimonial-bg card-span text-white mt-10 mt-md-7 mt-lg-8 mx-4 mx-md-0">
+                        <div class="card-body pt-0 p-md-0">
+                          <div class="d-flex flex-column flex-md-row align-items-center">
+                            <div class="card-span-img">
+                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/3.png"
+                                  alt="" /></div>
+                            </div>
+                            <div class="mt-n6 mt-md-0 text-center text-md-start px-md-6 px-xl-8 px-xxl-10">
+                              <h4 class="mb-0 fw-medium text-white">Roy Cozart</h4>
+                              <p class="fw-normal mb-0 text-primary">Roco American Transport LLC - Owner</p>
+                              <p class="card-text text-200 mt-3">“OOForms.com exceeds my expectations on every level.
+                                They always respond quickly and are easy to work with freeing me to focus on finding
+                                loads and making money. In many cases they are working ahead of me where I find they
+                                signed me up with the major brokers even before I request they do it. Carrier packets
+                                are no longer a bottle neck or concern in my operation. Use them, you won’t regret it.”
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="row h-100">
+                    <div class="col-12">
+                      <div class="card testimonial-bg card-span text-white mt-10 mt-md-7 mt-lg-8 mx-4 mx-md-0">
+                        <div class="card-body pt-0 p-md-0">
+                          <div class="d-flex flex-column flex-md-row align-items-center">
+                            <div class="card-span-img">
+                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/3.png"
+                                  alt="" /></div>
+                            </div>
+                            <div class="mt-n6 mt-md-0 text-center text-md-start px-md-6 px-xl-8 px-xxl-10">
+                              <h4 class="mb-0 fw-medium text-white">Moses Wallace</h4>
+                              <p class="fw-normal mb-0 text-primary">Delivering Success Trucking LLC - Owner</p>
+                              <p class="card-text text-200 mt-3">“Very fast and efficient. When it comes to responding
+                                quickly and getting task completed they are number 1 on my list. Amazing service
+                                definitely a great member to have on the team.”
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
               <div class="row justify-content-center justify-content-xl-end me-auto mt-xl-n7 pe-xl-8">
                 <div class="col-2 text-end position-relative z-index-2">
@@ -572,6 +625,10 @@
                       aria-label="Slide 3"> </button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                       aria-label="Slide 4"> </button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                      aria-label="Slide 5"> </button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                      aria-label="Slide 6"> </button>
                   </div>
                 </div>
               </div>
