--- a/public/index.html
+++ b/public/index.html
@@ -273,8 +273,9 @@
         <div class="row align-items-center min-vh-100">
           <div class="col-md-7 col-xl-7 pt-7 text-md-start text-center">
             <h1 class="display-4 text-light fw-thin">We serve small trucking companies: We fill out <b>Carrier
-                Packets</b> & we
-              <br class="d-none d-xl-block" /> <strong class="fw-bolder">Dispatch. </strong>
+                Packets</b>.
+              <!-- & we
+              <br class="d-none d-xl-block" /> <strong class="fw-bolder">Dispatch. </strong> -->
             </h1>
             <br class="d-none d-xxl-block" />
             <p class="fs-1 text-400 pt-0">Take action now and free yourself from the hassle that comes with filling out
@@ -304,7 +305,7 @@
                       id="floatingEmail" type="email" placeholder="name@example.com" />
                     <label for="floatingEmail">Email</label>
                   </div>
-                  <div class="form-floating mb-3">
+                  <!-- <div class="form-floating mb-3">
                     <select required name='service' class="form-control input-box form-ensurance-header-control"
                       id="floatingCatrgory">
                       <option value="Carrier Packet">Carrier Packet</option>
@@ -313,7 +314,7 @@
 
                     </select>
                     <label for="floatingCatrgory">Contacting about ... </label>
-                  </div>
+                  </div> -->
                   <div class="form-floating mb-3">
                     <textarea name="message" class="form-control input-box form-ensurance-header-control"
                       placeholder="Leave a comment here"></textarea>
@@ -356,12 +357,13 @@
                   <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/packet.png"
                       alt="..." /><img class="car-insurance-icon car-insurance-icon-hover"
                       src="assets/img/icons/packet-hover.png" alt="..." /></div>
-                </a><a class="circle-hover-wrapper nav-link mb-lg-4" id="nav-home-tab" href="#!" data-bs-toggle="tab"
+                </a>
+                <!-- <a class="circle-hover-wrapper nav-link mb-lg-4" id="nav-home-tab" href="#!" data-bs-toggle="tab"
                   data-bs-target="#nav-home" role="tab" aria-controls="nav-home" aria-selected="false">
                   <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/dispatching.png"
                       alt="..." /><img class="car-insurance-icon car-insurance-icon-hover"
                       src="assets/img/icons/dispatching-hover.png" alt="..." /></div>
-                </a>
+                </a> -->
               </div>
               <div class="tab-content w-100" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-car" role="tabpanel" aria-labelledby="nav-car-tab">
@@ -383,7 +385,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="tab-pane fade" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                <!-- <div class="tab-pane fade" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                   <div class="row align-items-center offset-sm-1 g-3">
                     <div class="col-md-6 col-xl-5 order-1 order-md-0">
                       <h1 class="text-light mb-md-6">Dispatching</h1>
@@ -402,7 +404,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
               </div>
             </div>
@@ -416,30 +418,30 @@
               <h2 class="text-light mb-7 text-center text-sm-start">Why Choose us</h2>
             </div>
             <div class="row">
-              <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
+              <div class="col-sm-6 col-lg-4 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/calendar.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Open 7 days a week</h4>
                 <p class="text-400 mb-md-0">We are open from 6 am to 6 pm CST & we are working on improving our times
                   even more for our clients in the West and East. </p>
               </div>
-              <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
+              <div class="col-sm-6 col-lg-4 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/response.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Fast response time</h4>
                 <p class="text-400 mb-md-0">We'll always have available staffing to start working on your packets as
                   soon as we receive them</p>
               </div>
-              <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
+              <div class="col-sm-6 col-lg-4 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/work.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">We'll do the hard work</h4>
                 <p class="text-400 mb-md-0">After you send us a packet, we'll take care of the rest. We'll call and
                   contact all parties needed to complete your Carrier Packet.</p>
               </div>
-              <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
+              <!-- <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/dispatchingwhy.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Dispatching</h4>
                 <p class="text-400 mb-md-0">We'll work with you to forge a plan that will make you the most money and
                   get you home when needed.</p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
