--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,7 @@
   </div>
   <main class="main" id="top">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
-      <div class="container"><a class="navbar-brand" href="index.html">
+      <div class="container"><a class="navbar-brand" href="">
           <img src="./assets/logos/ooforms transparent.png" width="110px" />
 
         </a>
@@ -653,7 +653,7 @@
         <div class="row">
           <h2 class="text-light mb-4">Contact Us</h2>
           <div class="col-12 col-lg-6 col-xl-7 mb-4 order-0 order-sm-0">
-            <a class="logo-footer fs-7" href="index.html">
+            <a class="logo-footer fs-7" href="">
               <img src="./assets/logos/ooforms transparent.png" width="40%" />
             </a>
             <p class="text-light my-4"> <i class="fas fa-map-marker-alt me-3"></i><span class="text-light">2616 S Loop W
