--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
 
     gtag('config', 'G-DV8QVFSP3F');
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1038107013"></script>
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-1038107013'); </script>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
