--- a/public/index.html
+++ b/public/index.html
@@ -271,20 +271,7 @@
 
       <div class="container">
         <div class="row align-items-center min-vh-100">
-          <div class="col-md-7 col-xl-7 pt-7 text-md-start text-center">
-            <h1 class="display-4 text-light fw-thin">We serve small trucking companies: We fill out <b>Carrier
-                Packets</b>.
-              <!-- & we
-              <br class="d-none d-xl-block" /> <strong class="fw-bolder">Dispatch. </strong> -->
-            </h1>
-            <br class="d-none d-xxl-block" />
-            <p class="fs-1 text-400 pt-0">Take action now and free yourself from the hassle that comes with filling out
-              carrier packets for only $100 per month.</p>
-            <br class="d-none d-xxl-block" />
-            <p class="fs-2 text-400">Contact us now to learn more. → </p>
 
-
-          </div>
           <div class="col-md-5 col-xl-5 pe-xxl-0">
             <div class="card card-bg shadow hero-header-form">
               <div class="card-body p-4 p-xl-6">
@@ -329,6 +316,31 @@
               </div>
             </div>
 
+          </div>
+          <div class="col-md-7 col-xl-7 pt-8 text-md-start text-center">
+            <h1 class="display-4 text-light fw-thin">Are you tired of filling out <b>Carrier
+                Packets</b>.
+              <!-- & we
+              <br class="d-none d-xl-block" /> <strong class="fw-bolder">Dispatch. </strong> -->
+            </h1>
+            <br class="d-none d-xxl-block" />
+            <p class="fs-1 text-400 pt-3">We can help you! You don't have to worry about filling out Carrier Packets
+              again. You will never have to pull over or stop dispatching to fill out Carrier Packets. Carrier Packets
+              are getting easier to fill out, but they still take time. All our clients know how to fill out Carrier
+              Packets, yet they use us because we are fast, reliable, and go above and beyond to free them from stress.
+              Register Now for more information
+            </p>
+
+            <p class="fs-1 text-400 pt-0">
+              Sign up NOW and free yourself from Carrier Packets. Before you had your authority, you didn't have to fill
+              out Carrier Packets. Sign up NOW to reclaim your freedom.
+            </p>
+            <p class="fs-1 text-400 pt-0">
+              We are open from 6:00 am to 6:00 pm, seven days a week, 365 days a year. We work during the holidays! We
+              only charge $100/month if you have one truck and $200 for two to four trucks.
+            </p>
+            <br class="d-none d-xxl-block" />
+            <p class="fs-2 text-400">Contact us now to learn more. </p>
           </div>
         </div>
       </div>
