Added Top Margin

--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,7 @@
       <div class="container">
         <div class="row align-items-center min-vh-100">
 
-          <div class="col-md-5 col-xl-5 pe-xxl-0">
+          <div class="col-md-5 col-xl-5 pe-xxl-0 mt-5">
             <div class="card card-bg shadow hero-header-form">
               <div class="card-body p-4 p-xl-6">
                 <h2 class="text-100 text-center">Register now for more information</h2>
