--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,7 @@
       <div class="container">
         <div class="row align-items-center min-vh-100">
 
-          <div class="col-md-5 col-xl-5 pe-xxl-0 mt-5">
+          <div class="col-md-5 col-xl-5 pe-xxl-0 mt-4">
             <div class="card card-bg shadow hero-header-form">
               <div class="card-body p-4 p-xl-6">
                 <h2 class="text-100 text-center">Register now for more information</h2>
@@ -317,9 +317,9 @@
             </div>
 
           </div>
-          <div class="col-md-7 col-xl-7 pt-8 text-md-start text-center">
+          <div class="col-md-7 col-xl-7 pt-2 text-md-start text-center">
             <h1 class="display-4 text-light fw-thin">Are you tired of filling out <b>Carrier
-                Packets</b>.
+                Packets</b>?
               <!-- & we
               <br class="d-none d-xl-block" /> <strong class="fw-bolder">Dispatch. </strong> -->
             </h1>
