--- a/public/termandcondition.html
+++ b/public/termandcondition.html
@@ -250,7 +250,7 @@
     </div>
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
-            <div class="container"><a class="navbar-brand" href="">
+            <div class="container"><a class="navbar-brand" href="index.html">
                     <img src="./assets/logos/ooforms transparent.png" width="110px" />
 
                 </a>
@@ -554,6 +554,15 @@
                 <div class="row justify-content-md-between justify-content-evenly py-4">
                     <div class="col-12 col-sm-8 col-md-6 col-lg-auto text-center text-md-start">
                         <p class="fs--1 my-2 fw-light text-200">All rights Reserved &copy; ooForms, 2022</p>
+                    </div>
+                    <div class="col-12 col-sm-8 col-md-6 col-lg-auto text-center text-md-end">
+                        <p class="fs--1 my-2 fw-light text-200"><a href="privacy.html">Privacy & Security</a></p>
+
+                    </div>
+                    <div class="col-12 col-sm-8 col-md-6 col-lg-auto text-center text-md-end">
+                        <p class="fs--1 my-2 fw-light text-200"><a href="termandcondition.html">Term and Conditions</a>
+                        </p>
+
                     </div>
                 </div>
             </div>
